[Feature] Ranking: Ranking Service Implementation + Unit Tests

--- a/CatMatch/appsettings.json
+++ b/CatMatch/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Ranking": {
+    "EvolutionCoef": 24,
+    "Limit": 400
+  }
 }
