[Feature] Cat Service: Implementation

--- a/CatMatch/appsettings.json
+++ b/CatMatch/appsettings.json
@@ -10,5 +10,8 @@
   "Ranking": {
     "EvolutionCoef": 24,
     "Limit": 400
+  },
+  "Cats": {
+    "EndPoint": "https://latelier.co/data/cats.json"
   }
 }
